fix some spacing

--- a/css/admin.css
+++ b/css/admin.css
@@ -1,17 +1,15 @@
-#dropdownMenuButton {
-  width: auto;
-  height: 4.4%;
-  background-color: #f5be6c;
-  color: black;
-  border: thin solid black;
-  border-radius: 5px;
+#inside-div {
+  width: 90%;
 }
 
-#dropdownMenuButton:hover {
-  background-color: #8fd4d9;
-  cursor: pointer;
+label {
+  margin: 1%;
 }
 
 #schedule_buttons {
-  display: none;
+  margin-left: 1%;
+}
+
+.input {
+  margin-right: 1%;
 }
